src/objects/pse__Billing_Event_Item__c.object
<CustomObject>
    <customHelpPage>pse__BillingEventItemHelp</customHelpPage>
    <description>Contains simplified, potentially summarized information for a billable record and often correspond with invoice line items in your financial system. Every billing event item must have a lookup relationship to either a budget, timecard split, expense, milestone, or miscellaneous adjustment. Grouped together into billing events.</description>
    <fields>
        <fullName>pse__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Event Batch</label>
        <referenceTo>pse__Billing_Event_Batch__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Event</label>
        <referenceTo>pse__Billing_Event__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget</label>
        <referenceTo>pse__Budget__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timecard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense</label>
        <referenceTo>pse__Expense__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <formula>IF(pse__Billing_Event__r.pse__Invoiced__c,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Invoiced</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Is_Released__c</fullName>
        <formula>IF(pse__Billing_Event__r.pse__Is_Released__c,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Released</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Miscellaneous_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Miscellaneous Adjustment</label>
        <referenceTo>pse__Miscellaneous_Adjustment__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Object_Id__c</fullName>
        <description>Id of the billable object that this item was generated from</description>
        <label>Object Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Rounded_Amount__c</fullName>
        <label>Rounded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Subcategory__c</fullName>
        <label>Subcategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Split__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timecard Split</label>
        <referenceTo>pse__Timecard__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Billing Event Item</label>
    <nameField>
        <displayFormat>BEI-{YYYYMMDD}-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Event Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
</CustomObject>